# Direct3D12

./: README.md
1 入门/HelloCBuffer!/: CMakeLists.txt  D3DApp.cpp  D3DApp.h  D3DAppDefine.h  D3DBase.h  D3DHelper.cpp  D3DHelper.h  GameTimer.h  Main.cpp
1 入门/HelloCube!/: D3DApp.cpp  D3DApp.h  D3DHelper.cpp  D3DHelper.h  GameTimer.h  Main.cpp
1 入门/HelloElement!/: D3DHelper.h  GameTimer.cpp  Main.cpp
1 入门/HelloFrameResources!/HelloGeometries!/: CMakeLists.txt  D3DApp.h  D3DBase.h  D3DHelper.cpp  D3DHelper.h  Main.cpp
1 入门/HelloFrameResources!/HelloSkull!/: D3DApp.cpp  D3DHelper.cpp  D3DHelper.h  GeometryGenerator.cpp  Main.cpp
1 入门/HelloFrameResources!/HelloTerrain!/: CMakeLists.txt  D3DApp.h  D3DHelper.cpp  D3DHelper.h  GeometryGenerator.cpp  Main.cpp
1 入门/HelloFrameResources!/HelloTriangle!/: D3DApp.cpp  D3DAppDefine.h  D3DHelper.cpp  D3DHelper.h  Main.cpp
1 入门/HelloTriangle!/: D3DApp.cpp  D3DApp.h  D3DBase.h  D3DHelper.cpp  D3DHelper.h  Main.cpp  Win32.h
1 入门/HelloWindow!/: CMakeLists.txt  D3DApp.cpp  D3DApp.h  D3DHelper.cpp  D3DHelper.h  Main.cpp  Win32.cpp
10 拾取射线/: D3DFrame.cpp  D3DFrame.h  shader.hlsl
11 立方体贴图/动态反射/: CMakeLists.txt  CubeRenderTarget.cpp  CubeRenderTarget.h  D3DFrame.cpp  D3DFrame.h  common.hlsl  shader.hlsl
11 立方体贴图/天空盒/: CMakeLists.txt  D3DFrame.cpp  D3DFrame.h  shader.hlsl
12 法线贴图/: D3DFrame.cpp  D3DFrame.h  common.hlsl  shader.hlsl
13 阴影贴图/: CMakeLists.txt  D3DFrame.cpp  D3DFrame.h
13 阴影贴图/shaders/: shader.hlsl  shadow.hlsl  shadow_debug.hlsl
14 Ambient Occlusion/: CMakeLists.txt  config.h.in
14 Ambient Occlusion/shaders/: common.hlsl  shader.hlsl  sky.hlsl
14 Ambient Occlusion/sources/: AmbientOcclusion.cpp  AmbientOcclusion.h  AmbientOcclusion_2.cpp  Helper.cpp  Helper.h  Main.cpp  project.h
15 四元数/: CMakeLists.txt  D3DFrame.cpp  D3DFrame.h  SsaoMap.cpp  SsaoMap.h
15 四元数/shaders/: common.hlsl  debug.hlsl  shader.hlsl  shadow.hlsl  ssao_blur.hlsl
16 骨骼动画/: CMakeLists.txt  config.h.in
16 骨骼动画/shaders/: common.hlsl  debug.hlsl  normal.hlsl  shader.hlsl  ssao.hlsl
16 骨骼动画/sources/: D3DFrame.cpp  D3DFrame.h  Main.cpp  ShadowMap.cpp  ShadowMap.h  project.h
2 光照/三点打光/: CMakeLists.txt  Main.cpp
2 光照/局部光照/: CMakeLists.txt  Main.cpp
2 光照/陆地与波浪/: CMakeLists.txt  Main.cpp
3 纹理/立方体/: CMakeLists.txt  Main.cpp
3 纹理/陆地与波浪/: CMakeLists.txt  Main.cpp  Waves.cpp  Waves.h
4 混合/陆地和波浪/: Main.cpp  shader.hlsl
5 模板缓冲区/平面镜成像/: Main.cpp
6 公告牌技术/: CMakeLists.txt  Main.cpp
7 深度复杂性可视化/: Main.cpp
7.1 初探计算着色器/: CMakeLists.txt  Main.cpp
7.2 计算着色器/: BlurFillter.cpp  BlurFillter.h  CMakeLists.txt  Main.cpp  shader_blur.hlsl  shader_main.hlsl
8 第一人称摄像机/: CMakeLists.txt  Camera.cpp  Camera.h  D3DFrame.cpp  D3DFrame.h  shader.hlsl
8.1 动态索引/: D3DFrame.cpp  lighting.hlsl  shader.hlsl
9 实例化渲染/: D3DFrame.cpp  D3DFrame.h  Main.cpp  shader.hlsl
D3DFrame/: Base.h  BaseHelper.h  BaseHelper_File.cpp  BaseHelper_File.h  BaseHelper_Memory.h  BaseHelper_Scanner.cpp  BaseHelper_Scanner.h  BaseHelper_Thread.cpp  BaseHelper_Thread.h  CMakeLists.txt  Camera.cpp  Camera.h  D3DApp.cpp  D3DApp.h  D3DBase.h  D3DHelper.cpp  D3DHelper.h  D3DHelper_Animation.cpp  D3DHelper_Animation.h  D3DHelper_Constant.h  D3DHelper_Exception.cpp  D3DHelper_Exception.h  D3DHelper_FrameResource.h  D3DHelper_GeometryGenerator.cpp  D3DHelper_GeometryGenerator.h  D3DHelper_Light.h  D3DHelper_Math.cpp  D3DHelper_Math.h  D3DHelper_Resource.h  D3DHelper_UploadBuffer.cpp  D3DHelper_UploadBuffer.h  GameTimer.cpp  M3dLoader.cpp  M3dLoader.h  c_base.h  c_hash.c  c_hash.h  c_vector.c  c_vector.h
D3DFrame/Others/: 光照理论.md
D3DFrame/shaders/: common.hlsl
Models/: skull.c
Resources/: plywood.dds
Resources/Normals/: plywood_normal.dds
